# perl-critic-sarif

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs
