[package]
name = "perl-critic-sarif"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Hardison <dylan@hardison.net>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "string"] }
eyre = "0.6.12"
git2 = { version = "0.18.2", features = ["vendored-libgit2"], default-features = false }
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde-sarif = "0.4.2"
serde_json = "1.0.113"
